chore(api): imma sucker for specs (#11)
