# pkg/api/magicv1/api.pb.gw.go
@@ -67,8 +67,8 @@ func local_request_MagicAPI_ListMagics_0(ctx context.Context, marshaler runtime.
 
 }
 
-func request_MagicAPI_DescribeMagic_0(ctx context.Context, marshaler runtime.Marshaler, client MagicAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq DescribeMagicRequest
+func request_MagicAPI_GetMagic_0(ctx context.Context, marshaler runtime.Marshaler, client MagicAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetMagicRequest
 	var metadata runtime.ServerMetadata
 
 	var (
@@ -88,13 +88,13 @@ func request_MagicAPI_DescribeMagic_0(ctx context.Context, marshaler runtime.Mar
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "magic_id", err)
 	}
 
-	msg, err := client.DescribeMagic(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.GetMagic(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
 
-func local_request_MagicAPI_DescribeMagic_0(ctx context.Context, marshaler runtime.Marshaler, server MagicAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq DescribeMagicRequest
+func local_request_MagicAPI_GetMagic_0(ctx context.Context, marshaler runtime.Marshaler, server MagicAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetMagicRequest
 	var metadata runtime.ServerMetadata
 
 	var (
@@ -114,7 +114,7 @@ func local_request_MagicAPI_DescribeMagic_0(ctx context.Context, marshaler runti
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "magic_id", err)
 	}
 
-	msg, err := server.DescribeMagic(ctx, &protoReq)
+	msg, err := server.GetMagic(ctx, &protoReq)
 	return msg, metadata, err
 
 }
@@ -148,18 +148,18 @@ func RegisterMagicAPIHandlerServer(ctx context.Context, mux *runtime.ServeMux, s
 
 	})
 
-	mux.Handle("GET", pattern_MagicAPI_DescribeMagic_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("GET", pattern_MagicAPI_GetMagic_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		var stream runtime.ServerTransportStream
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/iamnande.cardmod.magic.v1.MagicAPI/DescribeMagic", runtime.WithHTTPPathPattern("/v1/magics/{magic_id}"))
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/iamnande.cardmod.magic.v1.MagicAPI/GetMagic", runtime.WithHTTPPathPattern("/v1/magics/{magic_id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_MagicAPI_DescribeMagic_0(rctx, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_MagicAPI_GetMagic_0(rctx, inboundMarshaler, server, req, pathParams)
 		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
@@ -167,7 +167,7 @@ func RegisterMagicAPIHandlerServer(ctx context.Context, mux *runtime.ServeMux, s
 			return
 		}
 
-		forward_MagicAPI_DescribeMagic_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_MagicAPI_GetMagic_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -232,23 +232,23 @@ func RegisterMagicAPIHandlerClient(ctx context.Context, mux *runtime.ServeMux, c
 
 	})
 
-	mux.Handle("GET", pattern_MagicAPI_DescribeMagic_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("GET", pattern_MagicAPI_GetMagic_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/iamnande.cardmod.magic.v1.MagicAPI/DescribeMagic", runtime.WithHTTPPathPattern("/v1/magics/{magic_id}"))
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/iamnande.cardmod.magic.v1.MagicAPI/GetMagic", runtime.WithHTTPPathPattern("/v1/magics/{magic_id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_MagicAPI_DescribeMagic_0(rctx, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_MagicAPI_GetMagic_0(rctx, inboundMarshaler, client, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_MagicAPI_DescribeMagic_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_MagicAPI_GetMagic_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -258,11 +258,11 @@ func RegisterMagicAPIHandlerClient(ctx context.Context, mux *runtime.ServeMux, c
 var (
 	pattern_MagicAPI_ListMagics_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "magics"}, ""))
 
-	pattern_MagicAPI_DescribeMagic_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "magics", "magic_id"}, ""))
+	pattern_MagicAPI_GetMagic_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "magics", "magic_id"}, ""))
 )
 
 var (
 	forward_MagicAPI_ListMagics_0 = runtime.ForwardResponseMessage
 
-	forward_MagicAPI_DescribeMagic_0 = runtime.ForwardResponseMessage
+	forward_MagicAPI_GetMagic_0 = runtime.ForwardResponseMessage
 )
